PRESTAGE: swagger.json update
